# KG

src/: KG1.txt  KG2.txt  KG3.txt  KG4.txt  KG5.txt
src/KG6/: CMakeLists.txt  README.md  config.json  main.cpp
src/KG6/assets/shaders/: default.frag  default.vert
src/KG6/include/: Camera.hpp  Mesh.hpp  Scene.hpp  VAO.hpp  VBO.hpp  shaderClass.hpp
src/KG6/src/: Camera.cpp  Mesh.cpp  Scene.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
